--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Payments</title>
-  <base href="https://github.com/oromeror.github.io/payments/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://js.paymentsos.com/v3/latest/secure-fields.min.js"></script>
